--- a/views/sanpham/home_sanpham.ejs
+++ b/views/sanpham/home_sanpham.ejs
@@ -8,7 +8,7 @@
   <body>
     <%- include('../inc/header') %>
     <div class="content">
-      <h1>Chưa biết home sẽ hiện cái gì??????</h1>
+      <h1>Chu Đình Hiếu</h1>
     </div>
   </body>
 </html>
