--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -3,12 +3,21 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='../stylesheets/style_header.css' />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <body>
     <%- include('../inc/header') %>
-    <div class="content">
-      <h1>Cà Văn Chung</h1> 
-    </div>
+  <div class="d-flex flex-row"> 
+  <%- include('../inc/sidebar') %>
+  <div class="content col-md-10 sm-10">
+    <h1>Cà Văn Chung</h1>
+  </div>
+</div>
+  <%- include('../inc/footer') %>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
   </body>
 </html>
