test dữ liệu chi tiết đơn hàng

--- a/views/donhang/home_donhang.ejs
+++ b/views/donhang/home_donhang.ejs
@@ -92,7 +92,7 @@
                       <%= donHang.tongTien %>
                     </td>
                     <td>
-                      <a class="btn btn-primary icon-btn ms-2 me-2">Chi tiết</a>
+                      <a href="/don-hang/chi-tiet/<%= donHang._id %> " class="btn btn-primary icon-btn ms-2 me-2" >Chi tiết</a>
                     </td>
                   </tr>
                   <% }); %>
