--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -1,4 +1,4 @@
 <div class="header col-md-12 sm-12">
-  <img src="../images/Logo.png" alt="Logo" class="logo"> 
+  <img src="/images/Logo.png" alt="Logo" class="logo"> 
   <span class="logo-text">SkyLap</span>
 </div>
