--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -1,23 +1,175 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= title %></title>
     <link rel='stylesheet' href='../stylesheets/style_header.css' />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <%- include('../inc/header') %>
-  <div class="d-flex flex-row"> 
-  <%- include('../inc/sidebar') %>
-  <div class="content col-md-10 sm-10">
-    <h1>Cà Văn Chung</h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css.css">
+    <style>
+        .tb1 {
+            width: 100%;
+            font-size: 100%;
+            padding: 5px;
+        }
+        
+        .tb2 {
+            width: 100%;
+            font-size: 100%;
+            padding: 5px;
+        }
+        
+        th {
+            border: 1px solid rgb(229, 218, 218);
+            border-bottom: 2px solid;
+            text-align: center;
+        }
+        
+        .th2 {
+            border: none;
+            text-align: center;
+        }
+        
+        .th2 img {
+            width: 30px;
+            height: 30px;
+        }
+        
+        td {
+            border: 1px solid rgb(229, 218, 218);
+            text-align: center;
+            align-items: center;
+        }
+        
+        .stt {
+            width: 3%;
+            text-align: center;
+        }
+        
+        .id {
+            width: 20%;
+        }
+        
+        .anh {
+            width: 10%;
+        }
+        
+        .ten {
+            width: 30%;
+        }
+        
+        .hanhDong {
+            width: 10%;
+        }
+        
+        .img1 {
+            width: 100%;
+            height: 50%;
+            margin: auto;
+            padding: 10%;
+        }
+        
+        tr {
+            margin-top: 10px;
+        }
+        
+        .hang:hover {
+            background-color: rgb(243, 241, 241);
+            font-size: 100%;
+            font-weight: bold;
+            text-decoration: underline;
+        }
+        
+        #searchForm {
+            margin: 20px auto;
+        }
+    </style>
+</head>
+<body>
+<%- include('../inc/header') %>
+<div class="d-flex flex-row">
+    <%- include('../inc/sidebar') %>
+    <div class="content col-md-10 sm-10">
+        <h2><%= title %></h2>
+        <form id="searchForm" action="/hang/search" method="GET">
+            <div class="row g-3">
+                <div class="col">
+                    <input type="text" id="textQuery" name="query" class="form-control" placeholder="Tên">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary">Tìm</button>
+                </div>
+                <div class="col-auto">
+                    <a href="/hang" id="clear" class="btn btn-secondary">Clear</a>
+                </div>
+                <div class="col-auto">
+                    <!-- Button trigger modal -->
+                    <div>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Thêm
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <a href="ada" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
+                                <a href="oce" type="button" class="btn btn-primary">Save changes</a>
+                                </div>
+                            </div>
+                            </div>
+                        </div>    
+                    </div>
+                   
+                </div>
+            </div>
+        </form>
+        <table class="tb1">
+            <tr>
+                <th class="stt">STT</th>
+                <th class="id">ID</th>
+                <th class="anh">Ảnh</th>
+                <th class="ten">Tên</th>
+                <th class="hanhDong">Hành Động</th>
+            </tr>
+            <% listHang.forEach((Hangsx, index) => { %>
+            <tr class="hang">
+                <td><%= index + 1 %></td>
+                <td><%= Hangsx._id %></td>
+                <td><img class="img1" src="<%= Hangsx.imageLogo %>" alt=""></td>
+                <td><%= Hangsx.tenHangSx %></td>
+                <td>
+                    <table class="tb2">
+                        <th class="th2">
+                            <a href="/adu">
+                                <img src="https://cdn2.iconfinder.com/data/icons/lucid-generic/24/edit_update_pencil_post_write-512.png"
+                                     alt="">
+                            </a>
+                        </th>
+                    </table>
+                </td>
+            </tr>
+            <% }) %>
+        </table>
+    </div>
   </div>
-</div>
-  <%- include('../inc/footer') %>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
-  </body>
+<%- include('../inc/footer') %>
+
+<script>
+   document.getElementById("clear").addEventListener("click", function(){
+        document.getElementById("textQuery").value = "";
+    })
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 </html>
