--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -48,15 +48,19 @@
         }
         
         .id {
-            width: 20%;
+            width: 15%;
         }
         
         .anh {
             width: 10%;
+            height: 30px;
         }
         
         .ten {
-            width: 30%;
+            width: 20%;
+        }
+        .trangThai{
+            width: 10%;
         }
         
         .hanhDong {
@@ -64,10 +68,10 @@
         }
         
         .img1 {
-            width: 100%;
-            height: 50%;
+            width: 80%;
+            height: 10%;
             margin: auto;
-            padding: 10%;
+            padding: 9%;
         }
         
         tr {
@@ -76,13 +80,44 @@
         
         .hang:hover {
             background-color: rgb(243, 241, 241);
-            font-size: 100%;
-            font-weight: bold;
             text-decoration: underline;
         }
         
         #searchForm {
             margin: 20px auto;
+        }
+        .modal-body{
+            display: flex;
+            flex-direction: column;
+           width: 100%;
+        }
+        .modal-body input{
+            width: 100%;
+            height: 50px;
+            margin: 20px auto;
+        }
+        .preview{
+            padding: 30px;
+        }
+        .add{
+            float: right;
+            width: 10%;
+            margin: 10px 15px;
+            text-align: center;
+            font-size: 100%;
+            min-width: 70px;
+        }
+        .top{
+            display: flex;
+            align-items: center;
+        }
+        .top #searchForm{
+            width: 100%;
+            margin: auto;
+        }
+        .top #form2{
+            width: 100%;
+            margin: auto;
         }
     </style>
 </head>
@@ -92,6 +127,7 @@
     <%- include('../inc/sidebar') %>
     <div class="content col-md-10 sm-10">
         <h2><%= title %></h2>
+        <div class="top">
         <form id="searchForm" action="/hang/search" method="GET">
             <div class="row g-3">
                 <div class="col">
@@ -104,40 +140,46 @@
                     <a href="/hang" id="clear" class="btn btn-secondary">Clear</a>
                 </div>
                 <div class="col-auto">
-                    <!-- Button trigger modal -->
-                    <div>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Thêm
-                        </button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                ...
-                                </div>
-                                <div class="modal-footer">
-                                <a href="ada" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
-                                <a href="oce" type="button" class="btn btn-primary">Save changes</a>
-                                </div>
-                            </div>
-                            </div>
-                        </div>    
-                    </div>
-                   
                 </div>
             </div>
         </form>
+        <div>
+            <button  type="button" class="add btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Thêm
+            </button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="form2 modal-content">
+                    <form id="form2" method="post" action="hang/addHangSX" enctype="multipart/form-data">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Thêm Hãng</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <input type="text" class="form-control" placeholder="Tên" name="tenHangSx">
+                            <input type="file" name="file" id="logoInput" accept="image/*">
+                        </div>
+                        <div class="modal-footer">
+                            <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</a>
+                            <button type="submit" class="btn btn-primary">Lưu</button>
+                        </div>
+                    </form>
+                    <div class="preview">
+                        <h5>Ảnh xem trước</h5>
+                        <img id="logoPreview" src="#" style="max-width: 100%; max-height: 200px;">
+                    </div>
+                </div>
+                </div>
+            </div>    
+        </div>
+    </div>
         <table class="tb1">
             <tr>
                 <th class="stt">STT</th>
                 <th class="id">ID</th>
                 <th class="anh">Ảnh</th>
                 <th class="ten">Tên</th>
+                <th class="trangThai">TrangThai</th>
                 <th class="hanhDong">Hành Động</th>
             </tr>
             <% listHang.forEach((Hangsx, index) => { %>
@@ -146,6 +188,7 @@
                 <td><%= Hangsx._id %></td>
                 <td><img class="img1" src="<%= Hangsx.imageLogo %>" alt=""></td>
                 <td><%= Hangsx.tenHangSx %></td>
+                <td><%= Hangsx.trangThai %></td>
                 <td>
                     <table class="tb2">
                         <th class="th2">
@@ -159,6 +202,23 @@
             </tr>
             <% }) %>
         </table>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-end">
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item"><a class="page-link" href="/hang">1</a></li>
+              <li class="page-item"><a class="page-link" href="/hang">2</a></li>
+              <li class="page-item"><a class="page-link" href="/hang">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
     </div>
   </div>
 <%- include('../inc/footer') %>
@@ -167,9 +227,24 @@
    document.getElementById("clear").addEventListener("click", function(){
         document.getElementById("textQuery").value = "";
     })
+    const logoInput = document.getElementById('logoInput');
+        const logoPreview = document.getElementById('logoPreview');
+
+        logoInput.addEventListener('change', function () {
+            const file = this.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    logoPreview.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            }
+        });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    
+    </script>
 </body>
 </html>
