--- a/views/hang/home_hang.ejs
+++ b/views/hang/home_hang.ejs
@@ -68,10 +68,12 @@
         }
         
         .img1 {
-            width: 80%;
-            height: 10%;
+            width: 100%;
+            height: 20%;
             margin: auto;
-            padding: 9%;
+            max-width: 100%;
+            max-height: 50px;
+           padding: 2%;
         }
         
         tr {
@@ -131,7 +133,7 @@
         <form id="searchForm" action="/hang/search" method="GET">
             <div class="row g-3">
                 <div class="col">
-                    <input type="text" id="textQuery" name="query" class="form-control" placeholder="Tên">
+                    <input required="true" type="text" id="textQuery" name="query" class="form-control" placeholder="Tên">
                 </div>
                 <div class="col-auto">
                     <button type="submit" class="btn btn-primary">Tìm</button>
@@ -140,6 +142,7 @@
                     <a href="/hang" id="clear" class="btn btn-secondary">Clear</a>
                 </div>
                 <div class="col-auto">
+                    <a href="/hang" id="clear" class="btn btn-secondary">All</a>
                 </div>
             </div>
         </form>
@@ -156,8 +159,8 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <input type="text" class="form-control" placeholder="Tên" name="tenHangSx">
-                            <input type="file" name="file" id="logoInput" accept="image/*">
+                            <input required="true" type="text" class="form-control" placeholder="Tên" name="tenHangSx">
+                            <input required="true" type="file" name="file" id="logoInput" accept="image/*">
                         </div>
                         <div class="modal-footer">
                             <a type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</a>
