Màn hình chi tiết sản phẩm

--- a/views/sanpham/home_sanpham.ejs
+++ b/views/sanpham/home_sanpham.ejs
@@ -76,7 +76,7 @@
               <%= product.giaTien %>
             </td>
             <td>
-              <a class="btn btn-primary icon-btn ms-2 me-2">Chi tiết</a>
+              <a href="/san-pham/chi-tiet/<%= product._id %>" class="btn btn-primary icon-btn ms-2 me-2">Chi tiết</a>
               <a class="btn btn-info icon-btn me-2">Sửa</a>
               <a class="btn btn-danger icon-btn me-2">Ẩn</a>
             </td>
